few code cleanups

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,6 @@
             <span class="greeting-js"> </span> I'm Joel
         </h1>
         <h2 id="description"><span class="txt-type" data-words='["a web developer", "a responsive web designer", "a Ui/Ux enthusaist", "a blogger"]' data-wait="2000"></span></h2>
-        <!-- <button class="btn">Click to scroll down</button> -->
     </main>
 </div>
     <!-- Showcase -->
@@ -45,9 +44,7 @@
     <section class="cards-container" id="showcase">
         <div class="cards cards-one">
             <div class="cards-main cards-main-one">
-                <!-- <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div> -->
                 <img class="lazy card-pic card-pic-one" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296209/new-portfolio/showcase/face_box_dell-xps15-front.png" alt="" >
-                <!-- <img src="https://res.cloudinary.com/stealthman22/image/upload/v1586299306/new-portfolio/showcase/smart_brain_ipad_ipad_black_portrait.png" alt=" " class=" card-pic card-pic-two "> -->
             </div>
             <div class=" cards-info ">
                 <h1 class="info-head">Recognize</h1>
@@ -57,16 +54,15 @@
                     <p>It also boasts of a fully functional SQL database built with PostgreSQL </p>
                 </p>
                 <span class="info-bottom"> <a href="https://github.com/stealthman22/smart-brain" target="_blank"> <img
-                            src="./img/showcase/web-programming.svg" alt="" class="info-icons ">code</a>
+                            src="./img/showcase/web-programming.svg" alt="" class="info-icons "></a>
                     <a href="https://image-recog-front-end.herokuapp.com/" target="_blank"><img
-                            src="./img/showcase/link.svg" alt="" class="info-icons"> link </a>
+                            src="./img/showcase/link.svg" alt="" class="info-icons"></a>
                 </span>
             </div>
         </div>
         <div class=" cards  cards-two">
             <div class=" cards-main cards-main-two ">
                 <img class=" lazy card-pic card-pic-three" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586299304/new-portfolio/showcase/robo_ipad_ipad_black_landscape.png" alt="" >
-                <!-- <img src="https://res.cloudinary.com/stealthman22/image/upload/v1586299290/new-portfolio/showcase/robo_iphone_5_iphone5c_green_portrait.png" alt="" class="card-pic card-pic-four"> -->
             </div>
 
             <div class=" cards-info ">
@@ -85,8 +81,7 @@
         <div class=" cards cards-three ">
             <div class=" cards-main cards-main-three ">
                 <img class="lazy card-pic-five" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296175/new-portfolio/showcase/boldness_macbookpro15_front.png" alt="">
-                <!-- <img src="https://res.cloudinary.com/stealthman22/image/upload/v1586296863/new-portfolio/showcase/stories_ipad_ipad_black_portrait.png" alt="" class="card-pic-six"> -->
-            </div>
+          </div>
             <div class=" cards-info ">
                 <h1 class="info-head">Dev Portfolio</h1>
                 <p class="info-body">
@@ -103,7 +98,6 @@
         <div class=" cards  cards-four">
             <div class=" cards-main cards-main-four ">
                 <img class="lazy card-pic-seven" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586299289/new-portfolio/showcase/logistics_landing_macbookpro13_front.png" alt="">
-                <!-- <img src="https://res.cloudinary.com/stealthman22/image/upload/v1586299287/new-portfolio/showcase/logistics_iphone_iphonexspacegrey_portrait.png" alt="" class="card-pic-eight"> -->
             </div>
             <div class=" cards-info">
                 <h1 class="info-head">Stealth Logistics</h1>
