changed lazyloader to lazysizes yall acting up

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <section class="cards-container" id="showcase">
         <div class="cards cards-one">
             <div class="cards-main cards-main-one">
-                <img class="lazy card-pic card-pic-one" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296209/new-portfolio/showcase/face_box_dell-xps15-front.png" alt="" >
+                <img class="lazyload card-pic card-pic-one" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296209/new-portfolio/showcase/face_box_dell-xps15-front.png" alt="" >
             </div>
             <div class=" cards-info ">
                 <h1 class="info-head">Recognize</h1>
@@ -62,7 +62,7 @@
         </div>
         <div class=" cards  cards-two">
             <div class=" cards-main cards-main-two ">
-                <img class=" lazy card-pic card-pic-three" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586299304/new-portfolio/showcase/robo_ipad_ipad_black_landscape.png" alt="" >
+                <img class=" lazyload card-pic card-pic-three" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586299304/new-portfolio/showcase/robo_ipad_ipad_black_landscape.png" alt="" >
             </div>
 
             <div class=" cards-info ">
@@ -80,7 +80,7 @@
 
         <div class=" cards cards-three ">
             <div class=" cards-main cards-main-three ">
-                <img class="lazy card-pic-five" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296175/new-portfolio/showcase/boldness_macbookpro15_front.png" alt="">
+                <img class="lazyload card-pic-five" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296175/new-portfolio/showcase/boldness_macbookpro15_front.png" alt="">
           </div>
             <div class=" cards-info ">
                 <h1 class="info-head">Dev Portfolio</h1>
@@ -97,7 +97,7 @@
         </div>
         <div class=" cards  cards-four">
             <div class=" cards-main cards-main-four ">
-                <img class="lazy card-pic-seven" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586299289/new-portfolio/showcase/logistics_landing_macbookpro13_front.png" alt="">
+                <img class="lazyload card-pic-seven" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586299289/new-portfolio/showcase/logistics_landing_macbookpro13_front.png" alt="">
             </div>
             <div class=" cards-info">
                 <h1 class="info-head">Stealth Logistics</h1>
@@ -113,7 +113,7 @@
 
         <div class=" cards cards-five">
             <div class=" cards-main cards-main-five">
-                <img class="lazy card-pic-nine" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296621/new-portfolio/showcase/survey_macbookair13_front.png" alt="">
+                <img class="lazyload card-pic-nine" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296621/new-portfolio/showcase/survey_macbookair13_front.png" alt="">
 
 
             </div>
@@ -131,7 +131,7 @@
         </div>
     </section>
 <div class="timeline-container">
-    <section class="timeline lazy-bg" id="achievements">
+    <section class="timeline lazyload-bg" id="achievements">
         <div class="container left">
             <div class="content">
                 <h2>January, 2020</h2>
@@ -356,9 +356,9 @@
 
 
     <!-- A <noscript> example using <img> with src and srcset. -->
-    <!--   <img class="lazy" data-srcset="/img/image-to-lazy-load-2x.jpg 2x, /img/image-to-lazy-load-1x.jpg 1x" data-src="/img/image-to-lazy-load-1x.jpg" src="/img/placeholder.jpg" alt="Alternative text to describe image.">
+    <!--   <img class="lazyload" data-srcset="/img/image-to-lazyload-load-2x.jpg 2x, /img/image-to-lazyload-load-1x.jpg 1x" data-src="/img/image-to-lazyload-load-1x.jpg" src="/img/placeholder.jpg" alt="Alternative text to describe image.">
     <noscript>
-      <img srcset="/img/image-to-lazy-load-2x.jpg 2x, /img/image-to-lazy-load-1x.jpg 1x" src="/img/image-to-lazy-load-1x.jpg" alt="Alternative text to describe image.">
+      <img srcset="/img/image-to-lazyload-load-2x.jpg 2x, /img/image-to-lazyload-load-1x.jpg 1x" src="/img/image-to-lazyload-load-1x.jpg" alt="Alternative text to describe image.">
     </noscript> -->
 
 <!-- Smooth scroll -->
