removing lazy loading code

--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
     <section class="cards-container" id="showcase">
         <div class="cards cards-one">
             <div class="cards-main cards-main-one">
-                <img class="lazyload card-pic card-pic-one" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296209/new-portfolio/showcase/face_box_dell-xps15-front.png" alt="" >
+                <img class=" card-pic card-pic-one" src="https://res.cloudinary.com/stealthman22/image/upload/v1586296209/new-portfolio/showcase/face_box_dell-xps15-front.png" alt="" >
             </div>
             <div class=" cards-info ">
                 <h1 class="info-head">Recognize</h1>
@@ -126,7 +126,7 @@
         </div>
         <div class=" cards  cards-two">
             <div class=" cards-main cards-main-two ">
-                <img class=" lazyload card-pic card-pic-three" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586299304/new-portfolio/showcase/robo_ipad_ipad_black_landscape.png" alt="" >
+                <img class="  card-pic card-pic-three"  src="https://res.cloudinary.com/stealthman22/image/upload/v1586299304/new-portfolio/showcase/robo_ipad_ipad_black_landscape.png" alt="" >
             </div>
 
             <div class=" cards-info ">
@@ -144,7 +144,7 @@
 
         <div class=" cards cards-three ">
             <div class=" cards-main cards-main-three ">
-                <img class="lazyload card-pic-five" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296175/new-portfolio/showcase/boldness_macbookpro15_front.png" alt="">
+                <img class=" card-pic-five" src="https://res.cloudinary.com/stealthman22/image/upload/v1586296175/new-portfolio/showcase/boldness_macbookpro15_front.png" alt="">
           </div>
             <div class=" cards-info ">
                 <h1 class="info-head">Dev Portfolio</h1>
@@ -161,7 +161,7 @@
         </div>
         <div class=" cards  cards-four">
             <div class=" cards-main cards-main-four ">
-                <img class="lazyload card-pic-seven" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586299289/new-portfolio/showcase/logistics_landing_macbookpro13_front.png" alt="">
+                <img class=" card-pic-seven"  src="https://res.cloudinary.com/stealthman22/image/upload/v1586299289/new-portfolio/showcase/logistics_landing_macbookpro13_front.png" alt="">
             </div>
             <div class=" cards-info">
                 <h1 class="info-head">Stealth Logistics</h1>
@@ -177,7 +177,7 @@
 
         <div class=" cards cards-five">
             <div class=" cards-main cards-main-five">
-                <img class="lazyload card-pic-nine" src="./img/showcase/RollingBall.svg" data-src="https://res.cloudinary.com/stealthman22/image/upload/v1586296621/new-portfolio/showcase/survey_macbookair13_front.png" alt="">
+                <img class="card-pic-nine" src="https://res.cloudinary.com/stealthman22/image/upload/v1586296621/new-portfolio/showcase/survey_macbookair13_front.png" alt="">
 
 
             </div>
