--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,13 @@
 
 <body>
     <!-- Preloader -->
-    <div class="preloader">
+    <!-- <div class="preloader">
     <div class="lds-heart"><div></div></div>
     <h2>Loading...</h2>
     <h3>Please wait while we get things ready for you</h2>
-    </div>
+    </div> -->
+
+
     <nav class="nav">
 <div class="hamburger">
     <div class="line"></div>
