finished preloader and progress bar

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,11 @@
 
 <body>
     <!-- Preloader -->
-    <!-- <div class="preloader">
+    <div class="preloader">
     <div class="lds-heart"><div></div></div>
     <h2>Loading...</h2>
-    <h3>Please wait while we get things ready for you</h2>
-    </div> -->
-
+    <h3>Please wait while we get things ready for you.</h2>
+    </div>
 
     <nav class="nav">
 <div class="hamburger">
@@ -38,6 +37,10 @@
             <!-- <li class="nav-link"><a href="" class="nav-items">About Me</a></li> -->
         </ul>
     </nav>
+
+<!-- Progress Bar -->
+<div id="progress"></div>
+
 <div class="hero-container">
     <main class="hero " id="home">
         <time class="time"></time>
@@ -50,7 +53,7 @@
 
     
 <div class="timeline-container">
-    <section class="timeline lazyload-bg" id="achievements">
+    <section class="timeline" id="achievements">
         <div class="container left">
             <div class="content">
                 <h2>January, 2020</h2>
