--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,25 @@
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="manifest" href="/site.webmanifest">
+<style>
+    .preloader {
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        background: linear-gradient(90deg, #000428 0%, #004e92 60%);
+        font-style: italic;
+        /* transition: all 0.3s ease; */
+    }
+</style>
 </head>
 
 <body>
@@ -268,7 +287,7 @@
         <div class="reasons-card">
             <div class="reasons-card-img reasons-card-img-six"></div>
             <div class="reasons-card-text">
-                <h2>Team-Spirit</h2>
+                <h2>Team-Spirited</h2>
                 <p> I thrive in teamed environments, and ensure to carry everyone  along.
                     Communication is one of my strongest points.
                 </p>
