getting ready to build about page

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,6 @@
         color: #fff;
         background: linear-gradient(90deg, #000428 0%, #004e92 60%);
         font-style: italic;
-        /* transition: all 0.3s ease; */
     }
 </style>
 </head>
@@ -52,8 +51,8 @@
             <li class="nav-link"><a href="#showcase" class="nav-items">Showcase</a></li>
             <li class="nav-link"><a href="#whyme" class="nav-items">Reasons</a></li>
             <li class="nav-link"><a href="#talk" class="nav-items">Contact</a></li>
-            <li class="nav-link"><a href="" class="nav-items">Blog</a></li>
-            <!-- <li class="nav-link"><a href="" class="nav-items">About Me</a></li> -->
+            <li class="nav-link"><a href="" class="nav-items">About Me</a></li>
+            <li class="nav-link"><a href="" class="nav-items">Blog</a></li> 
         </ul>
     </nav>
 
