working on the about page

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
     <link rel="manifest" href="/site.webmanifest">
 <style>
     .preloader {
@@ -51,7 +51,7 @@
             <li class="nav-link"><a href="#showcase" class="nav-items">Showcase</a></li>
             <li class="nav-link"><a href="#whyme" class="nav-items">Reasons</a></li>
             <li class="nav-link"><a href="#talk" class="nav-items">Contact</a></li>
-            <li class="nav-link"><a href="" class="nav-items">About Me</a></li>
+            <li class="nav-link"><a href="./src/about.html" class="nav-items">About Me</a></li>
             <li class="nav-link"><a href="" class="nav-items">Blog</a></li> 
         </ul>
     </nav>
