--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
     <link rel="manifest" href="/site.webmanifest">
+    <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
     <style>
         .preloader {
             height: 100vh;
@@ -54,7 +54,7 @@
             <li class="nav-link"><a href="#skills" class="nav-items">Skills</a></li>
             <li class="nav-link"><a href="#whyme" class="nav-items">Why Me</a></li>
             <li class="nav-link"><a href="#talk" class="nav-items">Contact</a></li>
-            <li class="nav-link"><a href="" class="nav-items">Blog</a></li>
+            <li class="nav-link"><a href="https://dev.to/alara_joel" target="_blank" class="nav-items">Blog</a></li>
         </ul>
     </nav>
 
