--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164135486-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-164135486-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -44,8 +57,8 @@
             <div class="line"></div>
             <div class="line"></div>
         </div>
-
-        <span class="nav-logo">A_S</span>
+        <a href="https://stealthman22.github.io/tech-resume/AlaraOJoelResume.pdf" target="_blank" class="nav-logo">
+            <span>A_S</span></a>
         <ul class="nav-ul">
 
             <li class="nav-link"><a href="#home" class="nav-items">Home</a></li>
@@ -229,16 +242,25 @@
     <div class="skills-wrapper">
         <section id="skills" class="skills-set">
             <div class="skills-card">
-                <h4>HTML and CSS</h4>
+                <h4>HTML5</h4>
+            </div>
+            <div class="skills-card">
+                <h4>CSS3</h4>
             </div>
             <div class="skills-card">
                 <h4>Javascript</h4>
             </div>
             <div class="skills-card">
-                <h4>React.js and Redux</h4>
+                <h4>React.js</h4>
             </div>
             <div class="skills-card">
-                <h4>Node.js and Express.js</h4>
+                <h4>Redux</h4>
+            </div>
+            <div class="skills-card">
+                <h4> Express.js</h4>
+            </div>
+            <div class="skills-card">
+                <h4>Node.js</h4>
             </div>
             <div class="skills-card">
                 <h4>PostgreSQL</h4>
@@ -324,8 +346,8 @@
     <section class="contact" id="talk">
         <div class="hiring">
             <h3>You should checkout my Resume :)</h3>
-            <a href="">
-                <button class="hiring-btn"> Grab a copy
+            <a href="https://stealthman22.github.io/tech-resume/AlaraOJoelResume.pdf" target="_blank">
+                <button class="hiring-btn"> View and Grab a copy
                     <img src="./img/contact/download.svg" alt="" class="hiring-icon"> </button>
             </a>
         </div>
@@ -418,6 +440,7 @@
     <script>
         const scroll = new SmoothScroll('a[href*="#"]');
     </script>
+    <script src="//code.tidio.co/28xspna2saq5sot7tjgszsbxpwkkqqcm.js" async></script>
 </body>
 
 
