finished with live chat

--- a/src/index.html
+++ b/src/index.html
@@ -241,34 +241,34 @@
 
     <div class="skills-wrapper">
         <section id="skills" class="skills-set">
-            <div class="skills-card">
-                <h4>HTML5</h4>
-            </div>
-            <div class="skills-card">
-                <h4>CSS3</h4>
-            </div>
-            <div class="skills-card">
-                <h4>Javascript</h4>
-            </div>
-            <div class="skills-card">
-                <h4>React.js</h4>
-            </div>
-            <div class="skills-card">
-                <h4>Redux</h4>
-            </div>
-            <div class="skills-card">
-                <h4> Express.js</h4>
-            </div>
-            <div class="skills-card">
-                <h4>Node.js</h4>
-            </div>
-            <div class="skills-card">
-                <h4>PostgreSQL</h4>
-            </div>
-            <div class="skills-card">
-                <h4>Python</h4>
-            </div>
 
+            <a class="skills-card" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank">
+                <h4>HTML5</h4>
+            </a>
+            <a class="skills-card" href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">
+                <h4>CSS3</h4>
+            </a>
+            <a class="skills-card" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank">
+                <h4>Javascript</h4>
+            </a>
+            <a class="skills-card" href="https://reactjs.org/docs/getting-started.html" target="_blank">
+                <h4>React.js</h4>
+            </a>
+            <a class="skills-card" href="https://redux.js.org/introduction/getting-started" target="_blank">
+                <h4>Redux</h4>
+            </a>
+            <a class="skills-card" href="https://expressjs.com/en/starter/installing.html" target="_blank">
+                <h4> Express.js</h4>
+            </a>
+            <a class="skills-card" href="https://nodejs.org/en/docs/" target="_blank">
+                <h4>Node.js</h4>
+            </a>
+            <a class="skills-card" href="https://www.postgresql.org/docs/" target="_blank">
+                <h4>PostgreSQL</h4>
+            </a>
+            <a class="skills-card" href="https://www.python.org/doc/" target="_blank">
+                <h4>Python</h4>
+            </a>
         </section>
     </div>
 
