preparing files for production

--- a/src/index.html
+++ b/src/index.html
@@ -180,8 +180,8 @@
                     <p>It uses react for the UI, and redux for state management, so the state of the search box can be recorded at all times. The profiles structure are fetched from an API.
                     </p>
                 </p>
-                <span class="info-bottom"> <a href=""> <img src="./img/showcase/web-programming.svg" alt=""
-                            class="info-icons "></a> <a href=""> <img src="./img/showcase/link.svg" alt=""
+                <span class="info-bottom"> <a href="https://github.com/stealthman22/RoboFirends" target="_blank"> <img src="./img/showcase/web-programming.svg" alt=""
+                            class="info-icons "></a> <a href="https://frosty-austin-c29ad6.netlify.app/" target="_blank"> <img src="./img/showcase/link.svg" alt=""
                             class="info-icons"> </a></span>
             </div>
         </div>
