--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,7 @@
 <body>
     <!-- Preloader -->
     <div class="preloader">
-        <div class="lds-heart">
-            <div></div>
-        </div>
+        <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
         <h2>Loading...</h2>
         <h3>Please wait while we get things ready for you.</h2>
     </div>
@@ -162,12 +160,22 @@
 
     <div class="timeline-container">
         <section class="timeline" id="achievements">
-            <div class="container left">
+            <div class="container right">
                 <div class="content">
-                    <h2>January, 2020</h2>
+                    <h2>September, 2020</h2>
                     <h3>Data Science and Machine Learning </h3>
-                    <p>Started the diploma in DS/ML offered by WorldQuant University.</p>
-                    <a href="https://wqu.org/programs/data-science" target="_blank">Check it out here</a>
+                    <p>Finished the first module of the diploma in DS/ML offered by WorldQuant University.</p>
+                    <a href="https://www.youracclaim.com/badges/fa443454-ec1d-4e9a-b235-0f562fbbe5bb" target="_blank">Check it out here</a>
+                </div>
+            </div>
+            <div class="container left  ">
+                <div class="content">
+                    <h2>September, 2020</h2>
+                    <h3>React Essentials (Hooks)</h3>
+                    <p>Learnt more about the new React Hooks</p>
+                    <p>also learnt some more ways of working with API's</p>
+                    <a href="https://res.cloudinary.com/stealthman22/image/upload/v1601607432/certificate.jpg" target="_blank"> Check
+                    it out here</a>
                 </div>
             </div>
             <div class="container right">
@@ -206,16 +214,6 @@
                     <p>Taught me the very basics</p>
                     <a href="https://www.vtc.com/products/HTML-45-with-CSS-Tutorials.htm" target="_blank"> Check it out
                     here</a>
-                </div>
-            </div>
-            <div class="container right">
-                <div class="content">
-                    <h2>2014</h2>
-                    <h3>Introduction to programming: Udacity</h3>
-                    <p>This was where it all began, with the Udacity app</p>
-                    <p>Learnt some basic web manipulations with python.</p>
-                    <a href="https://www.udacity.com/course/intro-to-programming-nanodegree--nd000" target="_blank"> Check
-                    it out here</a>
                 </div>
             </div>
         </section>
