--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
             <div class="container right">
                 <div class="content">
                     <h2>November, 2019</h2>
-                    <h3>Cerification: Complete Web Developer</h3>
+                    <h3>Certification: Complete Web Developer</h3>
                     <p> I completed this intensive Zero to Mastery course with tutor Andrei Neagoie.</p>
                     <p>Used React, Node, Express and PostgreSQL</p>
                     <a href="https://res.cloudinary.com/stealthman22/image/upload/v1574698452/ZTM_grad.jpg" target="_blank">View my certificate here</a>
