few corrections in xibo project

--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
         <div class=" cards-info ">
             <h1 class="info-head">Xibo Admin</h1>
             <p class="info-body">
-                <p>I succesfully deployed the Admin dashboard of a digital signage product for and Enterprise company, based on Xibo.</p>
+                <p>I succesfully deployed the Admin dashboard of a digital signage product for an Enterprise, based on Xibo CMS.</p>
                 <p>I configured a barebones AWS server with the LAMP stack and Docker compose via SSH.</p>
                 <p>Added an Apache reverse proxy and effectively secured the dashboard with a Let's Encrypt cronjob.</p>
             </p>
